Added the test render and prepared the section element for scrolling txt

--- a/src/index.html
+++ b/src/index.html
@@ -12,25 +12,22 @@
         <div>
             <h1 class="heroSectionHeader"> 360° Design</h1>
             <h2 class="heroSectionSubHeader">Unser Portfolio</h2>
-            <video id = "heroSectionVideo" class="heroSectionVideo" src="./assets/testVideo.mp4" autoplay muted loop></video>
+            <video id = "heroSectionVideo" class="heroSectionVideo" src="./assets/BoxRender.mp4" autoplay muted loop></video>
         </div>
     </section>
     <section class="adSection">
-        <div class="adSectionOverlayFade">
-
+        <div>
+            <img class="adSectionOverlayFade" src="./assets/Stock.png" alt="Image displaying design days">
+            <img class="adSectionLogo" src="./assets/Stock.png" alt="Image displaying design days">
+            <div>
+                <p>
+                    Text1
+                </p>
+                <p>
+                    subtext
+                </p>
+            </div>
+            <video src="./assets/BoxRender.mp4" autoplay muted loop></video>
         </div>
     </section>
-
-    <section class="adSection">
-        <div class="adSectionOverlayFade">
-
-        </div>
-    </section>
-
-    <section class="adSection">
-        <div class="adSectionOverlayFade">
-            <img src="" alt="">
-        </div>
-    </section>
-     
 </body>
