Added side scrolling text when scrolling down the site

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1">
     <title>Document</title>
 </head>
 <body>
@@ -15,103 +15,37 @@
             <video id = "heroSectionVideo" class="heroSectionVideo" src="./assets/BoxRender.mp4" autoplay muted loop></video>
         </div>
     </section>
-    <section class="adSection">
-        <div class="stickyDiv">
-            <img class="adSectionOverlayFade" src="./assets/Stock.png" alt="Image displaying design days">
-            <img class="adSectionLogo" src="./assets/Stock.png" alt="Image displaying design days">
-            <video src="./assets/BoxRender.mp4" autoplay muted loop></video>
-        </div>
-        <div class="adSectionStory">
+
+    <section class="section">
+        <div>
+            <img src="./assets/Stock.png" alt="cover image">
             <div>
-                <div class = "adSectionStoryFirstText">
-                    <h3 class="adSectionStoryText">
-                        3 Tage
-                    </h3>
-                    <h4 class="adSectionSubTextItem">
-                        Gustieren, flanieren & Probieren 
-                    </h4>
-                </div>
-            </div>
-            <div>
-                <div class = "adsectionStorySecondText">
-                    <h3 class="adSectionStoryText">
-                        3 Tage
-                    </h3>
-                    <h4 class="adSectionSubTextItem">
-                        Gustieren, flanieren & Probieren 
-                    </h4>
-                </div>
-            </div>
-            <div>
-                <div  class = "adSectionStoryFirstText">
-                    <h3 class="adSectionStoryText">
-                        3 Tage
-                    </h3>
-                    <h4 class="adSectionSubTextItem">
-                        Gustieren, flanieren & Probieren 
-                    </h4>
-                </div>
-            </div>
-            <div>
-                <div class = "adsectionStorySecondText">
-                    <h3 class="adSectionStoryText">
-                        3 Tage
-                    </h3>
-                    <h4 class="adSectionSubTextItem">
-                        Gustieren, flanieren & Probieren 
-                    </h4>
+                <video src="./assets/BoxRender.mp4" autoplay muted loop></video>
+                <div class="storySlideShow">
+                    <p class="storyText "> Text1</p>
+                    <p class="storyText"> Text2</p>
+                    <p class="storyText"> Text3</p>
+                    <p class="storyText"> Text4</p>
+                    <p class="storyText"> Text5</p>
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="adSection">
-        <div class="stickyDiv">
-            <img class="adSectionOverlayFade" src="./assets/Stock.png" alt="Image displaying design days">
-            <img class="adSectionLogo" src="./assets/Stock.png" alt="Image displaying design days">
-            <video src="./assets/BoxRender.mp4" autoplay muted loop></video>
-        </div>
-        <div class="adSectionStory">
+    <section class="section">
+        <div>
+            <img src="./assets/Stock.png" alt="cover image">
             <div>
-                <div class = "adSectionStoryFirstText">
-                    <h3 class="adSectionStoryText">
-                        3 Tage
-                    </h3>
-                    <h4 class="adSectionSubTextItem">
-                        Gustieren, flanieren & Probieren 
-                    </h4>
-                </div>
-            </div>
-            <div>
-                <div class = "adsectionStorySecondText">
-                    <h3 class="adSectionStoryText">
-                        3 Tage
-                    </h3>
-                    <h4 class="adSectionSubTextItem">
-                        Gustieren, flanieren & Probieren 
-                    </h4>
-                </div>
-            </div>
-            <div>
-                <div  class = "adSectionStoryFirstText">
-                    <h3 class="adSectionStoryText">
-                        3 Tage
-                    </h3>
-                    <h4 class="adSectionSubTextItem">
-                        Gustieren, flanieren & Probieren 
-                    </h4>
-                </div>
-            </div>
-            <div>
-                <div class = "adsectionStorySecondText">
-                    <h3 class="adSectionStoryText">
-                        3 Tage
-                    </h3>
-                    <h4 class="adSectionSubTextItem">
-                        Gustieren, flanieren & Probieren 
-                    </h4>
+                <video src="./assets/BoxRender.mp4" autoplay muted loop></video>
+                <div class="storySlideShow">
+                    <p class="storyText "> Text1</p>
+                    <p class="storyText"> Text2</p>
+                    <p class="storyText"> Text3</p>
+                    <p class="storyText"> Text4</p>
+                    <p class="storyText"> Text5</p>
                 </div>
             </div>
         </div>
     </section>
+
 </body>
