--- a/src/index.html
+++ b/src/index.html
@@ -17,32 +17,29 @@
     </section>
 
     <section class="section">
-        <div>
-            <img src="./assets/Stock.png" alt="cover image">
+        <div class="sectionContainer">
+            <img class="adSectionLogo" src="./assets/DesignDays_Logo_turkis.png" alt="cover image">
             <div>
                 <video src="./assets/BoxRender.mp4" autoplay muted loop></video>
                 <div class="storySlideShow">
-                    <p class="storyText "> Text1</p>
-                    <p class="storyText"> Text2</p>
-                    <p class="storyText"> Text3</p>
-                    <p class="storyText"> Text4</p>
-                    <p class="storyText"> Text5</p>
-                </div>
-            </div>
-        </div>
-    </section>
+                    <div class="storyElement ">
+                        <h2> 3 Tage </p>
+                        <h5> Gustieren, flanieren & probieren</p>
+                    </div>
+                    
+                    <div class="storyElement ">
+                        <h2>33.000 Besucher </p>
+                        <h5>An 3 Austellungstagen</p>
+                    </div>
 
-    <section class="section">
-        <div>
-            <img src="./assets/Stock.png" alt="cover image">
-            <div>
-                <video src="./assets/BoxRender.mp4" autoplay muted loop></video>
-                <div class="storySlideShow">
-                    <p class="storyText "> Text1</p>
-                    <p class="storyText"> Text2</p>
-                    <p class="storyText"> Text3</p>
-                    <p class="storyText"> Text4</p>
-                    <p class="storyText"> Text5</p>
+                    <div class="storyElement ">
+                        <h2> 15.000 qm Austellungsfläche</p>
+                        <h5> Outdoor & Indoor</p>
+                    </div>
+                    <div class="storyElement ">
+                        <h2>2 Konzerte</p>
+                        <h5>pro jahr im Wolkenturm</p>
+                    </div>
                 </div>
             </div>
         </div>
