--- a/src/index.html
+++ b/src/index.html
@@ -18,8 +18,8 @@
 
     <section class="section">
         <div class="sectionContainer">
-            <img class="adSectionLogo" src="./assets/DesignDays_Logo_turkis.png" alt="cover image">
-            <div>
+            <div class="sectionContentContainer">
+                <img class="adSectionLogo" src="./assets/DesignDays_Logo_turkis.png" alt="cover image">
                 <video src="./assets/BoxRender.mp4" autoplay muted loop></video>
                 <div class="storySlideShow">
                     <div class="storyElement ">
@@ -39,6 +39,64 @@
                     <div class="storyElement ">
                         <h2>2 Konzerte</p>
                         <h5>pro jahr im Wolkenturm</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="section">
+        <div class="sectionContainer">
+            <div class="sectionContentContainer">
+                <img class="adSectionLogo" src="./assets/DesignDays_Logo_turkis.png" alt="cover image">
+                <video src="./assets/BoxRender.mp4" autoplay muted loop></video>
+                <div class="storySlideShow">
+                    <div class="storyElement ">
+                        <h2> 3 Tage </p>
+                        <h5> Gustieren, flanieren & probieren</p>
+                    </div>
+                    
+                    <div class="storyElement ">
+                        <h2>33.000 Besucher </p>
+                        <h5>An 3 Austellungstagen</p>
+                    </div>
+
+                    <div class="storyElement ">
+                        <h2> 15.000 qm Austellungsfläche</p>
+                        <h5> Outdoor & Indoor</p>
+                    </div>
+                    <div class="storyElement ">
+                        <h2>2 Konzerte</p>
+                        <h5>pro jahr im Wolkenturm</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="section">
+        <div class="sectionContainer">
+            <div class="sectionContentContainer">
+                <img class="adSectionLogo" src="./assets/DesignDays_Logo_turkis.png" alt="cover image">
+                <div class="trioSlideShow">
+                    <div id="firstSlideShowFirstElement" class="trioSlideShowSlide">
+                        <img src="./assets/SaxophoneGuy.jpg" alt="photo">
+                        <img src="./assets/SaxophoneGuy.jpg" alt="photo">
+                        <img src="./assets/SaxophoneGuy.jpg" alt="photo">
+                        <img src="./assets/SaxophoneGuy.jpg" alt="photo">
+                        <img src="./assets/SaxophoneGuy.jpg" alt="photo">
+
+                    </div>
+                    <div class="trioSlideShowSlide">
+                        <img src="./assets/SaxophoneGuy.jpg" alt="photo">
+                        <img src="./assets/Bühne.jpg" alt="photo">
+                        <img src="./assets/Stock.png" alt="photo">
+                        <img src="./assets/Stock.png" alt="photo">
+                        <img src="./assets/Stock.png" alt="photo">
+                        <img src="./assets/Stock.png" alt="photo">
+                        <img src="./assets/Stock.png" alt="photo">
+                        <img src="./assets/Stock.png" alt="photo">
+
                     </div>
                 </div>
             </div>
