--- a/src/index.html
+++ b/src/index.html
@@ -81,22 +81,43 @@
                 <div class="trioSlideShow">
                     <div id="firstSlideShowFirstElement" class="trioSlideShowSlide">
                         <img src="./assets/SaxophoneGuy.jpg" alt="photo">
-                        <img src="./assets/SaxophoneGuy.jpg" alt="photo">
-                        <img src="./assets/SaxophoneGuy.jpg" alt="photo">
-                        <img src="./assets/SaxophoneGuy.jpg" alt="photo">
-                        <img src="./assets/SaxophoneGuy.jpg" alt="photo">
-
-                    </div>
-                    <div class="trioSlideShowSlide">
+                        <img src="./assets/Bühne.jpg" alt="photo">
                         <img src="./assets/SaxophoneGuy.jpg" alt="photo">
                         <img src="./assets/Bühne.jpg" alt="photo">
-                        <img src="./assets/Stock.png" alt="photo">
-                        <img src="./assets/Stock.png" alt="photo">
-                        <img src="./assets/Stock.png" alt="photo">
-                        <img src="./assets/Stock.png" alt="photo">
-                        <img src="./assets/Stock.png" alt="photo">
-                        <img src="./assets/Stock.png" alt="photo">
+                        <img src="./assets/Bühne.jpg" alt="photo">
+                        <img src="./assets/SaxophoneGuy.jpg" alt="photo">
+                        <img src="./assets/SaxophoneGuy.jpg" alt="photo">
+                        <img src="./assets/SaxophoneGuy.jpg" alt="photo">
+                        <img src="./assets/SaxophoneGuy.jpg" alt="photo">
+                        <img src="./assets/SaxophoneGuy.jpg" alt="photo">
+                        <img src="./assets/SaxophoneGuy.jpg" alt="photo">
+                    </div>
+                    <div id="firstSlideShowSecondElement" class="trioSlideShowSlide">
+                        <img src="./assets/SaxophoneGuy.jpg" alt="photo">
+                        <img src="./assets/Bühne.jpg" alt="photo">
+                        <img src="./assets/SaxophoneGuy.jpg" alt="photo">
+                        <img src="./assets/Bühne.jpg" alt="photo">
+                        <img src="./assets/Bühne.jpg" alt="photo">
+                        <img src="./assets/SaxophoneGuy.jpg" alt="photo">
+                        <img src="./assets/SaxophoneGuy.jpg" alt="photo">
+                        <img src="./assets/SaxophoneGuy.jpg" alt="photo">
+                        <img src="./assets/SaxophoneGuy.jpg" alt="photo">
+                        <img src="./assets/SaxophoneGuy.jpg" alt="photo">
+                        <img src="./assets/SaxophoneGuy.jpg" alt="photo">
+                    </div>
 
+                    <div id="firstSlideShowThirdElement" class="trioSlideShowSlide">
+                        <img src="./assets/SaxophoneGuy.jpg" alt="photo">
+                        <img src="./assets/Bühne.jpg" alt="photo">
+                        <img src="./assets/SaxophoneGuy.jpg" alt="photo">
+                        <img src="./assets/Bühne.jpg" alt="photo">
+                        <img src="./assets/Bühne.jpg" alt="photo">
+                        <img src="./assets/SaxophoneGuy.jpg" alt="photo">
+                        <img src="./assets/SaxophoneGuy.jpg" alt="photo">
+                        <img src="./assets/SaxophoneGuy.jpg" alt="photo">
+                        <img src="./assets/SaxophoneGuy.jpg" alt="photo">
+                        <img src="./assets/SaxophoneGuy.jpg" alt="photo">
+                        <img src="./assets/SaxophoneGuy.jpg" alt="photo">
                     </div>
                 </div>
             </div>
