finished layout will now implement the right pictures and elements

--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,10 @@
         </div>
     </div>
 
+    <div class="imagePopUpOverlay">
+        <img id="overlayImg" src="" alt="">
+    </div>
+
     <section id="heroSection" class="heroSection">
         <div>
             <video id = "heroSectionVideo" class="heroSectionVideo" src="./assets/Box_DONE_02.mp4" autoplay muted loop></video>
@@ -519,8 +523,7 @@
                     <img class="adSectionLogo" src="./assets/DesignDistrict_Logo_gelb.png" alt="cover image">
                     <div class="sectionHeaderText">
                         <h2> Erlebnissfaktor</h2>
-                        <h3> Der Design District macht ganz Wien zur Design-Erlebniswelt, zieht ein breites<br>
-                            Publikum an und fördert den Austausch zwischen Konsumenten und Anbietern.</h3>
+                        <h3> Der Design District macht ganz Wien zur Design-Erlebniswelt.</h3>
                     </div>
                 </div>
                
