FIyed quotation one layout  and adjusted some text sizes to fit

--- a/src/index.html
+++ b/src/index.html
@@ -285,7 +285,7 @@
                                 <div  class=" storyElementMultiElementContainerRightCenteredContainer">
                                     <h3 class="signikaRegularSemibold"> WEIN & KULINARIK </p>
                                         <p class="signikaRegular">
-                                            Ein breites kulinarisches An-
+                                            Ein breites kulinarisches An-<br class="removableBreakLine">
                                             gebot erhöht die Verweildauer<br class="removableBreakLine">
                                             
                                             der Besucher, zusätzlich stellen<br class="removableBreakLine">
@@ -313,8 +313,8 @@
                     <div id="quotationBorder" class="quotationBorder borderGold"></div>
                     <div class="quotationTextContainer">
                         <h3 class="questaGrandeBold"> 
-                            „Design ist Lebensfreude. Es belebt<br class="removableBreakLine">
-                            unsere Sinne und unsere Fantasie.<br class="removableBreakLine">
+                            „Design ist Lebensfreude. Es belebt<br>
+                            unsere Sinne und unsere Fantasie.<br>
                             Und hier ist es zuhause.“</h3>
                     </div>
                     <div class="quatationBigText">
