added footer section

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,9 @@
     <script src="bundle.js"></script>
     <div class="navigationMenu">
         <div class="homeButton">
-            <img src="./assets/Home-Button.png" alt="">
+            <a href="#heroSection">
+                <img src="./assets/Home-Button.png" alt="">
+            </a>
         </div>
         <div class="navigationMenuLinks">
             <div class="navigationMenuLink">
@@ -768,6 +770,66 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </section>
+
+    <section class="footerSectionContainer">
+        <div class="footerSectionContacts">
+            <div>
+                <p>
+                    <span class="signikaRegularSemibold">
+                        Wir sind gerne persönlich für sie da
+                    </span>
+                    <br>
+                    <span class="signikaRegularSemibold">
+                        Sabine Jäger: +43 (0) 664 42 12 999<br>
+                        Peter Syrch: +43 (0) 664 41 44 855
+                    </span>
+                </p>
+            </div>
+            <a href="#DesignDays">
+                <img class="footerSectionContactsImg" src="./assets/01_Ka-Ching_DesignDays_GIF.gif">
+            </a>
+            <a href="#DesignDays">
+                <img class="footerSectionContactsImg" src="./assets/01_Ka-Ching_DesignDays_GIF.gif">
+            </a>
+            <a href="#DesignDays">
+                <img class="footerSectionContactsImg" src="./assets/01_Ka-Ching_DesignDays_GIF.gif">
+            </a>
+            <a href="#DesignDays">
+                <img class="footerSectionContactsImg" src="./assets/01_Ka-Ching_DesignDays_GIF.gif">
+            </a>
+        </div>
+
+        <div class="footerSectionLinks">
+            <div class="footerSectionLinksContainer">
+                <p class="footerSectionText signikaRegular">
+                    folgen sie uns:
+                </p>
+                <div class="footerSectionSocialMedia">
+                    <div class="footerSectionSocialMediaImg">
+                        <img  src="./assets/facebookIcon.png" alt="">
+                    </div>
+                    <div class="footerSectionSocialMediaImg">
+                        <img src="./assets/instagrammIcon.jpg" alt="">
+                    </div>
+                    <div class="footerSectionSocialMediaImg">
+                        <img src="./assets/youtubeIcon.png" alt="">
+                    </div>
+                </div>
+                <div class="footerSectionSubLinks">
+                    <div class="footerSectionSublinkText">
+                        <a class="signikaRegular">Home</a>
+                        <a class="signikaRegular">Home</a>
+                        <a class="signikaRegular">Home</a>
+                    </div>
+                    <div class="footerSectionSublinkText">
+                        <a class="signikaRegular">Home</a>
+                        <a class="signikaRegular">Impressum</a>
+                    </div>
+                </div>
+            </div>
+            
         </div>
     </section>
 </body>
